# modulo1_mlops_python

./: .buildinfo  .gitignore  _config.yml  _toc.yml  caso_estudio.html  caso_estudio.md  genindex.html  intro.html  intro.md  objects.inv  resultados_aprendizaje.html  resultados_aprendizaje.md  search.html  searchindex.js
_sources/: caso_estudio.md  intro.md  resultados_aprendizaje.md
example/: .gitignore  README.html  dvc.yaml  params.yaml  pyproject.toml
example/.dvc/: config
example/src/session_duration/: __init__.py  config.py  generate_data.py  prepare_data.py  train.py
example/tests/: test_pipeline_contracts.py
unidad_1/: 01_panorama_mlops.html  01_panorama_mlops.md  02_de_notebook_a_sistema.html  02_de_notebook_a_sistema.ipynb
unidad_2/: 03_ciclo_vida_modelo.html  03_ciclo_vida_modelo.md  04_pipeline_base_regresion.html  04_pipeline_base_regresion.ipynb
unidad_3/: 05_git_fundamentos.html  05_git_fundamentos.md  06_git_cheatsheet.html  06_git_cheatsheet.md  07_git_github_flujo_equipo.html  07_git_github_flujo_equipo.ipynb
unidad_4/: 08_poetry_fundamentos.html  08_poetry_fundamentos.md  09_poetry_cheatsheet.html  10_entornos_reproducibles.html
unidad_5/: 11_dvc_fundamentos.html  11_dvc_fundamentos.md  12_dvc_cheatsheet.html  13_pipeline_dvc.html
unidad_6/: 14_mlflow_fundamentos.html  14_mlflow_fundamentos.md  15_mlflow_cheatsheet.html  16_reproducibilidad_auditoria.html
unidad_7/: 17_estructura_proyecto_ml.html  18_ecosistema_herramientas.html  18_ecosistema_herramientas.md  19_checklist_modulo.html  20_ejemplo_end_to_end_dvc_mlflow.html  (+1 more)
(+21 files in other folders)
