[project]
name = "session-duration-mlops-example"
version = "0.1.0"
description = "Ejemplo end-to-end de regresion con Poetry, DVC y MLflow."
authors = [
    { name = "MLOps Python" }
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "dvc>=3.0,<4.0",
    "joblib>=1.4,<2.0",
    "matplotlib>=3.10,<4.0",
    "mlflow>=3.0,<4.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.3,<3.0",
    "pyyaml>=6.0,<7.0",
    "scikit-learn>=1.8,<2.0"
]

[tool.poetry]
packages = [
    { include = "session_duration", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
